# Dark-Channel-Prior

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/haze_machine/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/dcp/: CMakeLists.txt  dcp.cpp  dcp.hpp  test_dcp.cpp
libs/executor/: CMakeLists.txt  executor.cpp  executor.hpp  test_executor.cpp
libs/haze_model/: CMakeLists.txt  haze_model.cpp  haze_model.hpp  test_haze_model.cpp  test_sample.cpp  test_transmission_creation.cpp
libs/image_loader/: CMakeLists.txt  image_loader.cpp  image_loader.hpp  test_image_loader.cpp
py_scripts/: comparator.py  diode_sampler.py  horizon_mapper.py  o-haze_renamer.py  requirements.txt
